--- a/src/styles/components/_skeleton.scss
+++ b/src/styles/components/_skeleton.scss
@@ -919,8 +919,8 @@
             display: flex;
             flex-direction: column;
             @include flex-gap(1rem);
-
             font-weight: 400;
+            padding-top: 0.5rem;
         }
 
         &--img {
@@ -947,9 +947,12 @@
             p {
                 font-size: .75rem;
                 font-weight: 400;
+                line-height: .975rem;
 
                 @media screen and (max-width: 768px) {
-                    margin-bottom: 1rem;
+                    &:not(:last-of-type) {
+                        margin-bottom: 0.5rem;
+                    }
                 }
             }
         }
@@ -998,6 +1001,10 @@
             display: flex;
             align-items: center;
             @include flex-gap(0.5rem);
+
+            sup {
+                left: -.5rem;
+            }
         }
 
         &--icon {
@@ -1028,14 +1035,15 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            @include flex-gap(0.5rem);
+            @include flex-gap(1rem);
+            margin-top: 0.5rem;
         }
 
         &--dot {
             width: 0.8rem;
             height: 0.8rem;
             border-radius: 50%;
-            background-color: $color-carbon;
+            background-color: $color-granite-grey;
             cursor: pointer;
 
             &--active {
